[js][less][search-results] fix search result cards not 100% height on safari

--- a/js/react/src/less/search-results.less
+++ b/js/react/src/less/search-results.less
@@ -13,6 +13,12 @@
   
 }
 
+.search-result-link-container {
+  text-decoration: none !important;
+  max-width: 185px;
+  height: 100%;
+}
+
 .search-result {
   //box-shadow: 0 0.1em 0.5em 0.1em rgba(100, 100, 100, 0.3);
   box-shadow: 0 .1em .3em .1em hsla(0,0%,0%,.25);
